--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.11",
+    "@heroicons/react": "^2.0.16",
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.2",
     "immer": "^9.0.19",
