--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@headlessui/react": "^1.7.11",
     "@heroicons/react": "^2.0.16",
+    "@radix-ui/react-dialog": "^1.0.2",
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.2",
     "immer": "^9.0.19",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
+    "phosphor-react": "^1.4.1",
     "prettier": "^2.8.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
