--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,25 +1,3 @@
 {
-  "extends": [
-    //"eslint:recommended",
-    "plugin:react/recommended",
-    "plugin:import/recommended",
-    "plugin:jsx-a11y/recommended",
-    "eslint-config-prettier"
-  ],
-  "settings": {
-    "react": {
-      "version": "detect"
-    },
-    "import/resolver": {
-      "node": {
-        "paths": ["src"],
-        "extensions": [".js", ".jsx", ".ts", ".tsx"]
-      }
-    }
-  },
-  "rules": {
-    "react/react-in-jsx-scope": "off",
-    "no-unused-vars": ["warn"],
-    "react/prop-types": ["error", { "ignore": ["my_prop_key_that_uses_object_map"] }]
-  }
+  "extends": "@rocketseat/eslint-config/react"
 }
