--- a/package.json
+++ b/package.json
@@ -1,39 +1,45 @@
 {
-  "name": "boardcardgame",
+  "name": "cardgame",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "vite --host",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.11",
-    "@heroicons/react": "^2.0.16",
-    "@radix-ui/react-dialog": "^1.0.2",
-    "@reduxjs/toolkit": "^1.9.2",
-    "axios": "^1.3.2",
-    "immer": "^9.0.19",
-    "install": "^0.13.0",
+    "@headlessui/react": "^1.7.17",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.0.6",
+    "@radix-ui/react-select": "^1.2.2",
+    "clsx": "^2.0.0",
+    "immer": "^10.0.2",
     "lodash": "^4.17.21",
-    "phosphor-react": "^1.4.1",
-    "prettier": "^2.8.4",
-    "prop-types": "^15.8.1",
+    "prettier": "^3.0.2",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-confetti": "^6.1.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "redux": "^4.2.1",
-    "redux-localstore": "^1.0.0",
-    "redux-persist": "^6.0.0"
+    "react-icons": "^4.10.1",
+    "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^3.1.0",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.6",
-    "vite": "^4.1.0"
+    "@rocketseat/eslint-config": "^2.1.0",
+    "@types/lodash": "^4.14.197",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react-swc": "^3.3.2",
+    "autoprefixer": "^10.4.15",
+    "eslint": "^8.47.0",
+    "postcss": "^8.4.28",
+    "prettier-plugin-tailwindcss": "^0.5.3",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.9"
   }
 }
